# NexusFab

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 5a465b992006_initial_schema.py
docs/: CODEBASE_ANALYSIS.md  REQUIREMENTS.md
docs/research/: energy-workforce-simulation.md  maintenance-spare-parts.md  nestle-compliance.md  production-operations.md  supply-chain-demand.md
frontend/: index.html  package-lock.json  package.json  verify2.cjs  verify3.cjs  verify_final.cjs  verify_maintenance.cjs  verify_maintenance.js  verify_plant_switch.cjs
frontend/src/: App.tsx
nexusfab/: config.py  database.py  main.py
nexusfab/api/: health.py  main.py  plants.py  router.py
nexusfab/models/: __init__.py  base.py  downtime.py  enums.py  maintenance.py  oee.py  plant.py  product.py  production.py  workforce.py
nexusfab/optimization/: demand.py  energy.py  maintenance.py  network.py  predictive_maintenance.py  regulatory.py  rerouting.py  scheduling.py  (+3 more)
tests/: test_allergens.py  test_allocation.py  test_ccps.py  test_changeover.py  test_cip_schedules.py  test_demand.py  test_energy_full.py  test_energy_scenarios.py  test_failure_gen.py  test_lead_times.py  test_line_speeds.py  test_network.py  test_pdm.py  test_sensor_stream.py  test_sequencing.py  test_spare_parts.py  test_transport.py  test_weibull.py  test_workforce.py  test_workforce_regulatory.py
wiki/: API-Reference.md  Architecture.md  Configuration.md  Contributing.md  Getting-Started.md  Home.md
(+107 files in other folders)
